--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Вспомнить все</title>
 </head>
 <body>
-Hello!
-lyuflyuflyu
+    <h1>Что нужно знать, чтобы делать сайты?</h1>
+    <p>
+        <ol>
+            <li><strong>HTML</strong></li>
+            <li><em>CSS</em></li>
+            <li>PHP</li>
+            <li>SQL</li>
+            <li>JavaScript</li>
+            <li>jQuery</li>
+            <li>Flash</li>
+            <li>SEO</li>
+        </ol>
+    </p>
+
+    <h2>PHP и JavaScript</h2>
+
+    <p>
+        Языки программирования <strong> PHP </strong> и <strong> JavaScript </strong> позволяют сделать сайт динамичным, то есть реагирующим на действия пользователя. Например, можно сделать красивую выпадающую менюшку или слайдер
+    </p>
+
+    <h2>Виды скриптов</h2>
+    <p>
+        Для этого пишутся скрипты (англ. <em>script</em> - «сценарий») - программы, позволяющие реагировать на действия пользователя. Скрипты бывают двух видов:
+        <ul>
+            <li>
+                те, которые выполняются на сервере, а результат их выполнения приходит в браузер к пользователю уже в готовом виде. Это скрипты, написанные на языке <strong> PHP </strong>. На нем пишуться <strong> CMS-ки </strong> – системы управления контентом.
+            </li>
+            <li>
+                те, которые выполняются прямо в браузере пользователя. Это скрипты, написанные на языке <strong>JavaScript</strong>. Они чаще всего используются для, того чтобы сделать страницу более удобной и красивой.
+            </li>
+        </ul>
+    </p>
+
+    <p>
+        <a href="tables.html">Таблицы тут</a>
+    </p>
+
 </body>
 </html>
